tests/error/misc_errors/not_higher_order.err
Error: Not higher-order (at $FILE:7:28)
  | 
5 | @compile_guppy
6 | def foo() -> None:
7 |     f: Function[[], None] = len
  |                             ^^^ Function `len` may not be used as a higher-order value

Guppy compilation failed due to 1 previous error
